# LQCD

./: .gitignore  16_16gen.json  8_16.json  8_16gen.json  CMakeLists.txt  CMakeListsasdasd.txt  LatticeQCD  README.md  compile  launcher.sh  makefileq  testMathias.json
include/: lqcd.h
include/Action/: action.h  puregauge.h
include/Actions/: action.h  puregauge.h
include/Apps/: app.h  applist.h  gaugefieldfactory.h  gaugefieldreader.h  wilsonflow.h
include/GaugeFieldFactory/: gaugefieldfactory.h
include/InputOutput/: inputconf.h  inputparser.h  io.h  outputconf.h  outputobs.h  outputterm.h
include/Math/: lattice.h  latticemath.h  operators.hpp  random.h  su3.h
include/Observables/: energydensity.h  observable.h  observablelist.h  plaquette.h  superobs.h  topologicalcharge.h
include/ParallelTools/: parallel.h
include/Utils/: clusterspecifier.h  latticeunits.h
input/: 24_128.input  24_16.input  24_32.input  24_64.input  24_b6.00_1024.json  28_128.input  28_16.input  28_32.input  28_64.input  28_b6.10_512.json  28test.json  28testlong.json  32_128.input  32_16.input  32_32.input  32_64.input  32_b6.20_1024.json  32test.json  48_b6.45_1024.json  8_16.input  flowTemp.json  puregauge.input
scripts/: autocompleter.py  jobRunner.py  pgfg.py  runFLOW  runGFR  runPGFG
src/: CMakeLists.txt  PGFG.pro  PGFG.pro.user.d5cc17f  lattice.cpp  lattice.h  main.cpp  sampler.cpp  sampler.h  system.cpp  system.h
src/Action/: action.cpp  action.h  actionlist.h  puregauge.cpp
src/Actions/: action.cpp  action.h  puregauge.cpp  puregauge.h
src/Apps/: app.cpp  gaugefieldfactory.cpp  gaugefieldreader.cpp  gfe.cpp  gfr.cpp  pgfg.cpp  wilsonflow.cpp
src/GaugeFieldFactory/: gaugefieldfactory.cpp
src/GaugeFieldReader/: gaugefieldreader.cpp  gaugefieldreader.h
src/InputOutput/: CMakeLists.txt  inputconf.cpp  inputparser.cpp  outputconf.cpp  outputconf.h  outputobs.cpp  outputterm.cpp
src/MainPrograms/: LatticeQCDMain.cpp  (+3 more)
user_extensions/: CMakeLists.txt
(+25 files in other folders)
